--- a/css/style.css
+++ b/css/style.css
@@ -1,108 +1,9 @@
-/* background */
-
-body {
-  font-family: Nunito, Josefin, sans-serif;
-  background-image: url('../images/back.jpg');
-
-
-}
-
-img{
-  border: 5px;
-  margin: 25px;
-}
-
-div{
-  align: 0 auto;
-  vertical-align: middle;
-}
-
-main{
-  margin: 25px;
-  border: 5px;
-}
-
-
-.container{
-  display: inline-block;
-  width: 40%;
-  border: 25px;
-  padding: 25px;
-  margin: 25px;
-  align-items: stretch;
-
-}
-
-.container2{
-  display: inline-block;
-  width: 40%;
-  padding: 25px;
-  border: 25px;
-  margin: 25px;
-
-}
-
-.container3{
-  display: block;
-  border: 25px;
-  padding: 25px;
-  margin: 25px;
-}
-
-.gallery img{
-  width: 30%;
-}
-
-.gallery a{
-  width: 45%;
-}
-
-.gallery{
-  display: flex;
-  flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: baseline;
+body{
+  font-family: Nunito, Josefin, sans-sans-serif;
 }
 
 footer{
   text-align: center;
-}
-
-/*navigation bar, sourced from w3schools.com/css/css_navbar.asp with modifications*/
-
-
-
-ul {
-  width: 100%;
-  list-style-type: none;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  background-color: white;
-}
-
-li {
-  float: right;
-  display: block;
-  padding: 10px;
-  background-color: white;
-}
-
-
-nav a:hover {
-  background-color: #e6e6e6;
-}
-
-nav a {
-  font-family: Nunito, Josefin, sans-serif;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #1a1a1a;
-}
-
-.active {
-  font-style: italic;
 }
 
 /* skip to main content, modified and sourced from https://accessibility.oit.ncsu.edu/it-accessibility-at-nc-state/developers/accessibility-handbook/mouse-and-keyboard-events/skip-to-main-content/*/
@@ -116,6 +17,7 @@ a.skip-main {
     overflow:hidden;
     z-index:-999;
 }
+
 a.skip-main:focus, a.skip-main:active {
     color: black;
     background-color: white;
@@ -123,7 +25,7 @@ a.skip-main:focus, a.skip-main:active {
     top: auto;
     width: 30%;
     height: auto;
-    overflow:auto;
+    overflow: auto;
     margin: 10px 35%;
     padding:5px;
     text-align:left;
@@ -131,11 +33,125 @@ a.skip-main:focus, a.skip-main:active {
     z-index:999;
 }
 
+/* Responsive Designs */
 
-/*responsive*/
-@media screen and (max-width:700px){
-  
-  .gallery{
-    flex-direction: column;
+@media screen and (min-width: 600px) {
+  body {
+    font-family: Nunito, Josefin, sans-serif;
+    background-image: url('../images/back.jpg');
+  }
+
+  ul {
+    width: 100%;
+    list-style-type: none;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background-color: white;
+  }
+
+   li {
+    float: right;
+    display: block;
+    padding: 10px;
+    background-color: white;
+  }
+
+  nav a {
+    font-family: Nunito, Josefin, sans-serif;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #1a1a1a;
+  }
+
+  .active {
+    font-style: italic;
+  }
+
+  img{
+    border: 5px;
+    margin: 25px;
+  }
+
+  div{
+    align: 0 auto;
+    vertical-align: middle;
+  }
+
+  main{
+    margin: 25px;
+    border: 5px;
+  }
+
+  .container{
+    display: inline-block;
+    width: 35%;
+    border: 25px;
+    padding: 25px;
+    margin: 25px;
+
+  }
+
+  .container2{
+    display: inline-block;
+    width: 40%;
+    padding: 25px;
+    border: 25px;
+    margin: 25px;
+
+  }
+
+  .container3 {
+    display: inline-block;
+    border: 25px;
+    padding: 25px;
+    margin: 25px;
+  }
+
+  .gallery img{
+    width: 30%;
+  }
+
+  .gallery {
+      display: flex;
+      flex-direction: row;
+    	flex-wrap: wrap;
+    	justify-content: center;
+    	align-items: baseline;
+  }
+
+}
+
+@media only screen and (max-width: 600px) {
+  /*fixing images*/
+  img{
+    max-width: 100%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: grey;
+  }
+
+  li a {
+    display: block;
+    padding: 8px 16px;
+    text-shadow: none;
+  }
+
+  nav a {
+    font-family: Nunito, Josefin, sans-serif;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #1a1a1a;
+  }
+
+  .active {
+    font-style: italic;
   }
 }
